# connefut_backend_rust

./: .gitignore  .tbls.yml  Cargo.toml  Dockerfile  Makefile  Makefile.toml  deny.toml  docker-compose.yml
.github/workflow/: config.yml
.github/workflows/: config.yml
db/: schema.sql
db/doc/: README.md  public.applicants.md  public.authentications.md  public.entries.md  public.messages.md  public.prefectures.md  public.recruitment_tags.md  public.recruitments.md  public.relationships.md  public.room_read_managements.md  public.rooms.md  public.schema_migrations.md  public.sports.md  public.stocks.md  public.tags.md  public.user_activity_areas.md  public.user_play_sports.md  public.users.md
db/migration/: schema.sql
db/migrations/: 000001_create_type_user_role_and_email_verification_status.down.sql  000001_create_type_user_role_and_email_verification_status.up.sql  000001_create_users_table.up.sql  000002_create_prefectures_table.up.sql  000002_create_table_users.up.sql  000003_add_last_sign_in_at_to_users.down.sql  000003_add_last_sign_in_at_to_users.up.sql  000003_create_table_sports.down.sql  000003_create_table_sports.up.sql  000004_create_competitions_table.up.sql  000004_create_table_prefectures.down.sql  000004_create_table_prefectures.up.sql  000005_create_recruitments_table.down.sql  000005_create_recruitments_table.up.sql  000005_create_table_tags.up.sql  000006_add_relation_to_recruitments.down.sql  000006_add_relation_to_recruitments.up.sql  000006_create_table_recruitments.down.sql  000006_create_table_recruitments.up.sql  000007_create_table_recruitment_tags.down.sql  000007_create_table_recruitment_tags.up.sql  000007_remove_column_location_url_to_recruitments.down.sql  000007_remove_column_location_url_to_recruitments.up.sql  000008_add_column_location_lat_and_location_lng_to_recruitments.down.sql  000008_add_column_location_lat_and_location_lng_to_recruitments.up.sql  000008_create_table_stocks.up.sql  000009_add_column_is_published_to_recruitments_table.up.sql  000009_create_table_relationships.down.sql  000009_create_table_relationships.up.sql  000010_create_table_authentications.down.sql  000010_create_table_authentications.up.sql  000010_remove_column_is_published_to_recruitments.up.sql  000011_add_column_status_to_recruitments.down.sql  000011_add_column_status_to_recruitments.up.sql  000012_create_table_stocks.down.sql  000012_create_table_stocks.up.sql  000013_add_relation_to_stocks.down.sql  000013_add_relation_to_stocks.up.sql  000014_create_index_to_recruitments.down.sql  000014_create_index_to_recruitments.up.sql  (+91 more)
db/schema/: README.md  public.sports.md  public.users.md
src/: config.rs  database.rs  graphql.rs  lib.rs  main.rs
src/graphql/: auth.rs  loader.rs  models.rs  mutations.rs  resolvers.rs
src/graphql/auth/: cookie.rs  external.rs  jwt.rs
src/graphql/loader/: prefecture.rs  sport.rs  stock.rs  tag.rs  user.rs
src/graphql/mail/: builder.rs  sender.rs
src/graphql/mail/template/: email_verification_code.html
src/graphql/models/: authentication.rs  prefecture.rs  recruitment.rs  sport.rs  stock.rs  tag.rs  user.rs
src/graphql/mutations/: recruitment_mutation.rs  stock_mutation.rs  tag_mutation.rs  user_mutation.rs
src/graphql/resolvers/: prefecture_resolver.rs  recruitment_resolver.rs  sport_resolver.rs  stock_resolver.rs  tag_resolver.rs  user_resolver.rs
src/graphql/utils/: pagination.rs
