[package]
name = "connefut_api"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#* framework
axum = "0.5.16"
axum-extra = {version = "0.3.7", features = ["cookie", "query"]}
hyper = { version = "0.14.20", features = ["full"] }
tower = "0.4.13"
tokio = {version = "1.21.2", features = ["full"]}
#* http client
reqwest = { version = "0.11.12", features = ["json"] }
#* cors
tower-http = { version = "0.3.4", features = ["cors"]}
#* graphql
async-graphql = {version = "4.0.15", features = ["chrono", "dataloader"]}
async-graphql-axum = "4.0.13"
#*postgres
sqlx = { version = "0.6.1", features = ["postgres", "runtime-tokio-rustls", "time", "chrono"]}
#* time
chrono =  {version = "0.4.22", default-features = false, features = ["clock", "std", "serde"]}
#* json
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.86"
#* error
anyhow = "1.0.65"
#* custom error
thiserror = "1.0.37"
#* log
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.16", features = ["json", "default"]}
#* cookie
cookie = "0.16.1"
#* global variable
once_cell = "1.15.0"
#* base64
base64 = "0.13.0"
#* env
envy = "0.4"
#* password
argon2 = "0.4.1"
rand_core = { version = "0.6.3", features = ["std"] }
#* rand 
rand = "0.8.5"
#* validation
validator = { version = "0.16.0", features = ["derive"] }
#* regular expression
regex = "1.6.0"
fancy-regex = "0.10.0"
#* jwt
jsonwebtoken = "8.1.1"
#* email
lettre = { version = "0.10", features = ["tokio1", "tokio1-rustls-tls", "tokio1-native-tls"]}
#* faker
fake = { version = "2.5"}
#* async trait
async-trait = "0.1.57"
#* openid-connect
openidconnect = "2.4.0"
#* features
futures = "0.3.25"